--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -506,6 +506,326 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"The rain in Spain\"\n",
+    "x = re.search(\"ai\", txt)\n",
+    "print(x.span())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "myText = \"I am not waiting to get the highest skill to score in exam, but time to get all content\"\n",
+    "letter_o = re.search('o',myText)\n",
+    "print(letter_o.span())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"The rain in Spain\"\n",
+    "x = re.search(r\"\\bS\\w+\", txt)\n",
+    "print(x.span())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = 'The rain in Spain'\n",
+    "x = re.findall('[a-c]', txt)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = 'The rain in Spain'\n",
+    "x = re.search('a', txt)\n",
+    "print(x.start())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = 'The rain in Spain'\n",
+    "x = re.search('a', txt)\n",
+    "print(x.end())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = 'The rain in Spain'\n",
+    "x = re.search('\\s', txt)\n",
+    "print(x.start())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['e', 'a', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "txtr = 'The rain in Spain'\n",
+    "y = re.findall('[a-g]', txtr)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "txtr = 'The rain in Spain'\n",
+    "y = re.findall('[a-zA-Z]', txtr)\n",
+    "print(len(y))\n",
+    "print(len(txtr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', ' ', ' ', '+', ' ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "txtr = 'The rain in + Spain'\n",
+    "y = re.findall(r'\\W', txtr)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"The rain in Spain\"\n",
+    "x = re.search(r\"\\bS\\w+\", txt)\n",
+    "print(x.span())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['&', '!', '!', ',', '@', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_text = 'The best thing in life is Jesus & being his follower 4ever!!, @ake.com'\n",
+    "spe_char = re.findall(r\"[^a-zA-Z0-9\\s]\", my_text)\n",
+    "print(spe_char)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def countSpecialChar(my_text):\n",
+    "    spe_char = re.findall(r\"[^a-zA-Z0-9\\s]\", my_text)\n",
+    "    count_char = len(spe_char)\n",
+    "    return count_char "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_text = 'The best thing in life is Jesus & being his follower 4ever!!, @ake.com'\n",
+    "countSpecialChar(my_text=my_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount is 20,000 dollars\n"
+     ]
+    }
+   ],
+   "source": [
+    "Amount = 20000\n",
+    "txt2 = f\"The amount is {Amount:,} dollars\"\n",
+    "print(txt2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nested dictionary**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Alice', 'age': 22, 'grades': {'math': 90, 'science': 85, 'history': 88}}\n",
+      "22\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "student = {\n",
+    "    \"name\": \"Alice\",\n",
+    "    \"age\": 22,\n",
+    "    \"grades\": {\n",
+    "        \"math\": 90,\n",
+    "        \"science\": 85,\n",
+    "        \"history\": 88\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print(student)  \n",
+    "print(student['age'])\n",
+    "print(student[\"grades\"]['math'])# Output: 90\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
