--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -826,6 +826,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = {\n",
+    "    \"student1\": {\"name\": \"Alice\", \"age\": 22, \"grades\": {\"math\": 90, \"science\": 85}},\n",
+    "    \"student2\": {\"name\": \"Bob\", \"age\": 21, \"grades\": {\"math\": 78, \"science\": 80}}\n",
+    "}\n",
+    "\n",
+    "print(students[\"student2\"][\"grades\"][\"science\"])  # Output: 80\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'student1': {'name': 'Alice', 'age': 22, 'grades': {'math': 95, 'science': 85}}, 'student2': {'name': 'Bob', 'age': 21, 'grades': {'math': 78, 'science': 80, 'english': 89}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "students[\"student1\"][\"grades\"][\"math\"] = 95  # Update value\n",
+    "students[\"student2\"][\"grades\"][\"english\"] = 89  # Add new key\n",
+    "\n",
+    "print(students)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
