--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -868,6 +868,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c1\n",
+      "name: John\n",
+      "age: 20\n",
+      "c2\n",
+      "name: May\n",
+      "age: 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'name' : 'John', 'age' : 20}\n",
+    "b = {'name' : 'May', 'age' : 23}\n",
+    "customers = {'c1' : a, 'c2' : b}\n",
+    "for x, obj in customers.items():\n",
+    "  print(x)\n",
+    "    \n",
+    "  for y in obj:\n",
+    "    print(y + ':', obj[y])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
