--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -897,6 +897,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 6:\n",
+    "  i += 1\n",
+    "  if i == 3:\n",
+    "    continue\n",
+    "  \n",
+    "  print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 1 is odd\n",
+      "The number 2 is even\n",
+      "The number 3 is odd\n",
+      "The number 4 is even\n",
+      "The number 5 is odd\n",
+      "The number 6 is even\n",
+      "The number 7 is odd\n",
+      "The number 8 is even\n",
+      "The number 9 is odd\n",
+      "The number 10 is even\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "j = 1\n",
+    "while j <= 10:\n",
+    "    if j%2==0:\n",
+    "        print(f\"The number {j} is even\")\n",
+    "    else:\n",
+    "        print(f\"The number {j} is odd\")\n",
+    "    j += 1\n",
+    "print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
