--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -958,6 +958,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John(36)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    def __str__(self):\n",
+    "        return f'{self.name}({self.age})'\n",
+    "p1 = Person('John', 36)\n",
+    "print(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "xx = 3000\n",
+    "def myfuck():\n",
+    "    global xx\n",
+    "    xx = 2000\n",
+    "\n",
+    "myfuck()   \n",
+    "print('x:',xx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monday\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "x = datetime.datetime.now()\n",
+    "print(x.strftime(\"%A\"))  # Output: Monday, Tuesday, etc.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
