--- a/Python_MCQ.ipynb
+++ b/Python_MCQ.ipynb
@@ -1005,14 +1005,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Monday\n"
+      "Monday\n",
+      "March\n"
      ]
     }
    ],
@@ -1020,15 +1021,27 @@
     "import datetime\n",
     "\n",
     "x = datetime.datetime.now()\n",
-    "print(x.strftime(\"%A\"))  # Output: Monday, Tuesday, etc.\n"
+    "print(x.strftime(\"%A\"))  # Output: Monday, Tuesday, etc.\n",
+    "print(x.strftime('%B'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = datetime.datetime(2024, 8, 20)\n",
+    "print(x.strftime('%d'))"
+   ]
   }
  ],
  "metadata": {
