--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -296,6 +296,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "n = len(my_array)\n",
+    "for i in range(n-1):\n",
+    "    for j in range(n-i-1):\n",
+    "        if my_array[j] > my_array[j+1]:\n",
+    "            my_array[j], my_array[j+1] = my_array[j+1], my_array[j]\n",
+    "\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
