--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -320,6 +320,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [3, 7, 9, 11, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Improved\n",
+    "my_array = [7, 3, 9, 12, 11]\n",
+    "\n",
+    "n = len(my_array)\n",
+    "for i in range(n-1):\n",
+    "    swapped = False\n",
+    "    for j in range(n-i-1):\n",
+    "        if my_array[j] > my_array[j+1]:\n",
+    "            my_array[j], my_array[j+1] = my_array[j+1], my_array[j]\n",
+    "            swapped = True\n",
+    "    if not swapped:\n",
+    "        break\n",
+    "\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
