--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -349,6 +349,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Selection Sort Implementation**\n",
+    "- To implement the Selection Sort algorithm in a programming language, we need:\n",
+    "\n",
+    "1. *An array with values to sort.*\n",
+    "2. *An inner loop that goes through the array, finds the lowest value, and moves it to the front of the array. This loop must loop through one less value each time it runs.*\n",
+    "3. *An outer loop that controls how many times the inner loop must run. For an array with n values, this outer loop must run n−1 times.*\n",
+    "- *The resulting code looks like this:*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
