--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -363,6 +363,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = [64, 34, 25, 5, 22, 11, 90, 12]\n",
+    "\n",
+    "n = len(my_array)\n",
+    "for i in range(n-1):\n",
+    "    min_index = i\n",
+    "    for j in range(i+1, n):\n",
+    "        if my_array[j] < my_array[min_index]:\n",
+    "            min_index = j\n",
+    "    min_value = my_array.pop(min_index)\n",
+    "    my_array.insert(i, min_value)\n",
+    "\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
