--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -385,8 +385,182 @@
     "            min_index = j\n",
     "    min_value = my_array.pop(min_index)\n",
     "    my_array.insert(i, min_value)\n",
-    "\n",
     "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Bubble Sort**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class mysolu():\n",
+    "    def sortBubble(self, myarray):\n",
+    "        n = len(myarray)\n",
+    "        for i in range(n-1):\n",
+    "            swapped = False\n",
+    "            for j in range(n-i-1):\n",
+    "                if myarray[j] > myarray[j+1]:\n",
+    "                    myarray[j],myarray[j+1] = myarray[j+1],myarray[j]\n",
+    "                    swapped = True\n",
+    "        print(f\"sorted myarray: {myarray}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted myarray: [2, 6, 7, 12, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myarray = [ 15,7,6,12,2]\n",
+    "mysolu().sortBubble(myarray=myarray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Selection sort**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class mypretty():\n",
+    "    def seleSort(self, myArray):\n",
+    "        n = len(myArray)\n",
+    "        for i in range(n):\n",
+    "            min_index = i\n",
+    "            for j in range(i+1,n):\n",
+    "                if myArray[j] < myArray[min_index]:\n",
+    "                    min_index = j\n",
+    "\n",
+    "                myArray[i],myArray[min_index] = myArray[min_index],myArray[i]\n",
+    "\n",
+    "        print(f\"My sorted myArray: {myArray}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My sorted myArray: [2, 6, 7, 12, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myArray =  [ 15,7,6,12,2]\n",
+    "mypretty().seleSort(myArray=myArray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insertion Sort Implementation\n",
+    "To implement the Insertion Sort algorithm in a programming language, we need:\n",
+    "\n",
+    "- *An array with values to sort.*\n",
+    "- *An outer loop that picks a value to be sorted. For an array with n values, this outer loop skips the first value, and must run n−1 times.*\n",
+    "- *An inner loop that goes through the sorted part of the array, to find where to insert the value. If the value to be sorted is at index i, the sorted part of the array starts at index 0 and ends at index i−1.*\n",
+    "- **The resulting code looks like this:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class mysoll():\n",
+    "    def myInsetSort(self, my_array):\n",
+    "        n = len(my_array)\n",
+    "        for i in range(1,n):\n",
+    "            insert_index = i\n",
+    "            current_value = my_array.pop(i)\n",
+    "            for j in range(i-1, -1, -1):\n",
+    "                if my_array[j] > current_value:\n",
+    "                    insert_index = j\n",
+    "            my_array.insert(insert_index, current_value)\n",
+    "        print(f\"My sorted array: {my_array}\")\n",
+    "\n",
+    "sol = mysoll()\n",
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "sol.myInsetSort(my_array=my_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Improved Insertion sort**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class inserSor():\n",
+    "    def myInsertionSort(self, my_array):\n",
+    "        n = len(my_array)\n",
+    "        for i in range(1,n):\n",
+    "            insert_index = i\n",
+    "            current_value = my_array[i]\n",
+    "            for j in range(i-1, -1, -1):\n",
+    "                if my_array[j] > current_value:\n",
+    "                    my_array[j+1] = my_array[j]\n",
+    "                    insert_index = j\n",
+    "                else:\n",
+    "                    break\n",
+    "            my_array[insert_index] = current_value\n",
+    "\n",
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "S = inserSor()\n",
+    "S.myInsertionSort(my_array=my_array)\n",
+    "print(\"Sorted array:\", my_array) \n",
+    " "
    ]
   },
   {
