--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -568,7 +568,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class mycls():\n",
+    "    def myfun(self, arr):\n",
+    "        n = len(arr)\n",
+    "        for i in range(1,n):\n",
+    "            min_idx = i\n",
+    "            current_value = arr[min_idx]\n",
+    "            for j in range(i-1,-1,-1):\n",
+    "                if arr[j]> current_value:\n",
+    "                    arr[j+1]=arr[j]\n",
+    "                    "
+   ]
   }
  ],
  "metadata": {
