--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -435,7 +435,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Selection sort**"
+    "**Selection sort**\n",
+    "* Selects the smallest element and swaps it with the current position."
    ]
   },
   {
