--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -392,6 +392,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Insertion sort using while loop*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertion_sort(arr):\n",
+    "    for i in range(1, len(arr)):\n",
+    "        key = arr[i]\n",
+    "        j = i - 1\n",
+    "        while j >= 0 and key < arr[j]:\n",
+    "            arr[j + 1] = arr[j]\n",
+    "            j -= 1\n",
+    "        arr[j + 1] = key\n",
+    "    return arr\n",
+    "\n",
+    "print(insertion_sort([64, 34, 25, 5, 22, 11, 90, 12]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Bubble Sort**"
    ]
   },
@@ -581,6 +615,353 @@
     "                    arr[j+1]=arr[j]\n",
     "                    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [ 1,6,7,8,9,11,4]\n",
+    "n =  len(A)\n",
+    "print(A[n-7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[-7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 12, 22, 25, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bubble_sort(arr):\n",
+    "    n = len(arr)\n",
+    "    for i in range(n):\n",
+    "        for j in range(0, n-i-1):\n",
+    "            if arr[j] > arr[j+1]:\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+    "    return arr\n",
+    "\n",
+    "# Example\n",
+    "print(bubble_sort([64, 25, 12, 22, 11]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 25, 12, 22, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bubble_sort(arr):\n",
+    "    n = len(arr)\n",
+    "    for i in range(n):\n",
+    "        for j in range(0, n-i-1):\n",
+    "            if arr[j] > arr[j+1]:\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+    "    return arr\n",
+    "\n",
+    "# Example\n",
+    "print(bubble_sort([64, 25, 12, 22, 11]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Quicksort Implementation**\n",
+    "- *To write a 'quickSort' method that splits the array into shorter and shorter sub-arrays we use recursion. This means that the 'quickSort' method must call itself with the new sub-arrays to the left and right of the pivot element. Read more about recursion here.*\n",
+    "\n",
+    "- **To implement the Quicksort algorithm in a programming language, we need:**\n",
+    "\n",
+    "- *An array with values to sort.*\n",
+    "    - A quickSort method that calls itself (recursion) if the sub-array has a size larger than 1.\n",
+    "    * A partition method that receives a sub-array, moves values around, swaps the pivot element into the sub-array and returns the index where the next split in sub-arrays happens.\n",
+    "    * The resulting code looks like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def partition(array, low, high):\n",
+    "    pivot = array[high]\n",
+    "    i = low - 1\n",
+    "\n",
+    "    for j in range(low, high):\n",
+    "        if array[j] <= pivot:\n",
+    "            i += 1\n",
+    "            array[i], array[j] = array[j], array[i]\n",
+    "\n",
+    "    array[i+1], array[high] = array[high], array[i+1]\n",
+    "    return i+1\n",
+    "\n",
+    "def quicksort(array, low=0, high=None):\n",
+    "    if high is None:\n",
+    "        high = len(array) - 1\n",
+    "\n",
+    "    if low < high:\n",
+    "        pivot_index = partition(array, low, high)\n",
+    "        quicksort(array, low, pivot_index-1)\n",
+    "        quicksort(array, pivot_index+1, high)\n",
+    "\n",
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "quicksort(my_array)\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Improved Quick Sort**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 12, 22, 25, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def quick_sort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "    pivot = arr[len(arr) // 2]\n",
+    "    left = [x for x in arr if x < pivot]\n",
+    "    middle = [x for x in arr if x == pivot]\n",
+    "    right = [x for x in arr if x > pivot]\n",
+    "    return quick_sort(left) + middle + quick_sort(right)\n",
+    "\n",
+    "print(quick_sort([64, 25, 12, 22, 11]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [-13, -10, 3, 6, 7, 15, 23.5, 55]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mergeSort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "\n",
+    "    mid = len(arr) // 2\n",
+    "    leftHalf = arr[:mid]\n",
+    "    rightHalf = arr[mid:]\n",
+    "\n",
+    "    sortedLeft = mergeSort(leftHalf)\n",
+    "    sortedRight = mergeSort(rightHalf)\n",
+    "\n",
+    "    return merge(sortedLeft, sortedRight)\n",
+    "\n",
+    "def merge(left, right):\n",
+    "    result = []\n",
+    "    i = j = 0\n",
+    "\n",
+    "    while i < len(left) and j < len(right):\n",
+    "        if left[i] < right[j]:\n",
+    "            result.append(left[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            result.append(right[j])\n",
+    "            j += 1\n",
+    "\n",
+    "    result.extend(left[i:])\n",
+    "    result.extend(right[j:])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "unsortedArr = [3, 7, 6, -10, 15, 23.5, 55, -13]\n",
+    "sortedArr = mergeSort(unsortedArr)\n",
+    "print(\"Sorted array:\", sortedArr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mersge Sort Without recurrsion**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [-13, -10, 3, 6, 7, 15, 23.5, 55]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge(left, right):\n",
+    "    result = []\n",
+    "    i = j = 0\n",
+    "    \n",
+    "    while i < len(left) and j < len(right):\n",
+    "        if left[i] < right[j]:\n",
+    "            result.append(left[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            result.append(right[j])\n",
+    "            j += 1\n",
+    "            \n",
+    "    result.extend(left[i:])\n",
+    "    result.extend(right[j:])\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "def mergeSort(arr):\n",
+    "    step = 1  # Starting with sub-arrays of length 1\n",
+    "    length = len(arr)\n",
+    "    \n",
+    "    while step < length:\n",
+    "        for i in range(0, length, 2 * step):\n",
+    "            left = arr[i:i + step]\n",
+    "            right = arr[i + step:i + 2 * step]\n",
+    "            \n",
+    "            merged = merge(left, right)\n",
+    "            \n",
+    "            # Place the merged array back into the original array\n",
+    "            for j, val in enumerate(merged):\n",
+    "                arr[i + j] = val\n",
+    "                \n",
+    "        step *= 2  # Double the sub-array length for the next iteration\n",
+    "        \n",
+    "    return arr\n",
+    "\n",
+    "unsortedArr = [3, 7, 6, -10, 15, 23.5, 55, -13]\n",
+    "sortedArr = mergeSort(unsortedArr)\n",
+    "print(\"Sorted array:\", sortedArr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- **Given an integer array nums of size n, return the number with the value closest to 0 in nums. If there are multiple answers, return the number with the largest value.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class mysolution():\n",
+    "    def closestZero(self, nums):\n",
+    "        n = len(nums)\n",
+    "        k = []\n",
+    "        for i in range(n):\n",
+    "            dis = [abs(x) for x in nums]\n",
+    "            k.append(dis)\n",
+    "        return min(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 5, 3, 4, 2, 1]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,5,-3,4,2,-1]\n",
+    "mysolution().closestZero(nums=nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
