--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -957,6 +957,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Heap Sort**\n",
+    "- *Uses a binary heap to extract elements in sorted order.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
