--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -965,6 +965,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 12, 22, 25, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "def heap_sort(arr):\n",
+    "    heapq.heapify(arr)\n",
+    "    return [heapq.heappop(arr) for _ in range(len(arr))]\n",
+    "\n",
+    "print(heap_sort([64, 25, 12, 22, 11]))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
