--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -993,6 +993,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Counting Sort (For small, positive integers)**\n",
+    "- *Counts occurrences of elements and sorts accordingly.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2, 3, 3, 4, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def counting_sort(arr):\n",
+    "    max_val = max(arr)\n",
+    "    count = [0] * (max_val + 1)\n",
+    "    \n",
+    "    for num in arr:\n",
+    "        count[num] += 1\n",
+    "\n",
+    "    sorted_arr = []\n",
+    "    for i, freq in enumerate(count):\n",
+    "        sorted_arr.extend([i] * freq)\n",
+    "\n",
+    "    return sorted_arr\n",
+    "\n",
+    "print(counting_sort([4, 2, 2, 8, 3, 3, 1]))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
