--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -1031,6 +1031,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Radix Sort (For large integers)**\n",
+    "- Sorts numbers digit by digit using Counting Sort as a subroutine.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 24, 45, 66, 75, 90, 170, 802]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def counting_sort_radix(arr, exp):\n",
+    "    n = len(arr)\n",
+    "    output = [0] * n\n",
+    "    count = [0] * 10\n",
+    "\n",
+    "    for i in arr:\n",
+    "        index = (i // exp) % 10\n",
+    "        count[index] += 1\n",
+    "\n",
+    "    for i in range(1, 10):\n",
+    "        count[i] += count[i - 1]\n",
+    "\n",
+    "    for i in range(n - 1, -1, -1):\n",
+    "        index = (arr[i] // exp) % 10\n",
+    "        output[count[index] - 1] = arr[i]\n",
+    "        count[index] -= 1\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        arr[i] = output[i]\n",
+    "\n",
+    "def radix_sort(arr):\n",
+    "    max_val = max(arr)\n",
+    "    exp = 1\n",
+    "    while max_val // exp > 0:\n",
+    "        counting_sort_radix(arr, exp)\n",
+    "        exp *= 10\n",
+    "    return arr\n",
+    "\n",
+    "print(radix_sort([170, 45, 75, 90, 802, 24, 2, 66]))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
