--- a/DSA_python.ipynb
+++ b/DSA_python.ipynb
@@ -1084,6 +1084,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Quick Sort (Divide & Conquer)**\n",
+    "- *Selects a pivot and partitions the array around it.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 12, 22, 25, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def quick_sort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "    pivot = arr[len(arr) // 2]\n",
+    "    left = [x for x in arr if x < pivot]\n",
+    "    middle = [x for x in arr if x == pivot]\n",
+    "    right = [x for x in arr if x > pivot]\n",
+    "    return quick_sort(left) + middle + quick_sort(right)\n",
+    "\n",
+    "print(quick_sort([64, 25, 12, 22, 11]))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
